修改配置测试

--- a/springcloud-zuul-config-5001-dev.yml
+++ b/springcloud-zuul-config-5001-dev.yml
@@ -2,8 +2,8 @@
 zuul:
   routes:
     fei:
-      path: /static/**
-      url: http://www.baidu.com
+      path: /fortest/**
+      url: http://www.taobao.com
     yu:
       path: /fei/**
-      serviceId: http://www.taobao.com/
+      serviceId: http://www.baidu.com
